--- a/Changes
+++ b/Changes
@@ -4,3 +4,6 @@ Revision history for Perl extension BIE::Data::HDF5.
 	- original version; created by h2xs 1.23 with options
 		-A -n BIE::Data::HDF5
 
+0.02  Mon Jan 07 12:48:17 2013
+	- Rewrite with Moose
+		
